Fix: mobile layout overlap, added hamburger menu logic, and cleaned CSS bugs

--- a/style.css
+++ b/style.css
@@ -83,6 +83,12 @@ header ul a {
     border-bottom: 3px transparent;
 }
 
+#menu-icon {
+    font-size: 3.5rem;
+    color: #3a89c9;
+    display: none;
+}
+
 ul a:hover,
 ul a.active {
     color: #3a89c9;
@@ -129,7 +135,7 @@ span {
     padding-top: 1rem;
     font-weight: 200;
     line-height: 1.5;
-    height: 25rem;
+    margin-bottom: 3rem;
 }
 
 /* ================= IMAGE ================= */
@@ -210,7 +216,7 @@ span {
     width: calc(100% + 8px);
     height: 100%;
     border-left: 3px solid #9f969c;
-    right: -8;
+    right: -8px;
     animation: cursor 0.6s infinite;
 }
 
@@ -600,6 +606,32 @@ span {
 
 /* ---------- Tablets & iPads ---------- */
 @media (max-width: 992px) {
+    #menu-icon {
+    display: block;
+  }
+
+  header ul {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #1f3f5b;
+    flex-direction: column;
+    text-align: center;
+    border-top: 2px solid #3a89c9;
+    display: none;
+  }
+
+  header ul.active {
+    display: flex; 
+  }
+
+  header ul a {
+    display: block;
+    margin: 2.5rem 0;
+    font-size: 3rem;
+  }
+
   html {
     font-size: 58%;
   }
